[package]
name = "cargo-gooseboy"
version = "0.3.1"
edition = "2024"
authors = ["awildergoose"]
description = "The Minecraft Gooseboy mod's CLI."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/awildergoose/cargo-gooseboy.git"
keywords = ["minecraft", "wasm"]
categories = ["game-development", "os", "wasm"]

[[bin]]
name = "cargo-gooseboy"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.28"
serde_json = "1.0.145"
toml_edit = "0.24.0"
zip = { version = "7.2.0", default-features = false, features = ["deflate"] }
